--- a/signer/Cargo.toml
+++ b/signer/Cargo.toml
@@ -8,10 +8,10 @@ repository = "https://github.com/Zondax/filecoin-signing-tools"
 description =""
 
 [dependencies]
-thiserror = "1.0"
+thiserror = "=1.0.22"
 base64 = "0.12.3"
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
+serde = { version = "=1.0.117", features = ["derive"] }
+serde_json = "=1.0.59"
 serde_cbor = "0.11.1"
 serde_bytes = "0.11.5"
 rayon = "1"
@@ -24,8 +24,8 @@ getrandom="0.1.14"
 libsecp256k1 = "0.3.5"
 blake2b_simd = "0.5.10"
 hmac = "0.8.1"
-zeroize = { version = "1.1", default-features = false, features = ["zeroize_derive"] }
-sha2 = "0.9.1"
+zeroize = { version = "=1.1", default-features = false, features = ["zeroize_derive"] }
+sha2 = "0.9.2"
 
 # logging
 log = "0.4.11"
