--- a/hfuzz-signer/Cargo.toml
+++ b/hfuzz-signer/Cargo.toml
@@ -12,9 +12,9 @@ path = "unsigned-message.rs"
 
 [dependencies]
 filecoin-signer = { features = ["with-arbitrary"], path = "../signer" }
-forest_address = "0.3.0"
-forest_crypto = "0.4.0"
-forest_message = "0.6.0"
+forest_address = "0.3.1"
+forest_crypto = "0.5.0"
+forest_message = "=0.7.0"
 honggfuzz = "0.5"
 
 [package]
