--- a/extras/Cargo.toml
+++ b/extras/Cargo.toml
@@ -8,12 +8,12 @@ repository = "https://github.com/Zondax/filecoin-signing-tools"
 description ="Temporary lib used for compatibility with wasm"
 
 [dependencies]
-forest_vm = "=0.3.0"
-forest_message = "=0.7.0"
+forest_vm = "=0.3.1"
+forest_message = { default-features = false, features = ["pairing"], version = "0.7.1" }
 forest_address = "=0.3.1"
 forest_encoding = "=0.2.1"
 forest_cid = "=0.2.0"
-forest_crypto = "=0.5.0"
+forest_crypto = { default-features = false, features = ["pairing"], version = "0.5.1" }
 multihash = "=0.13.1"
 multihash-derive = "=0.7.0"
 forest_json_utils = "=0.1.0"
