--- a/service/Cargo.toml
+++ b/service/Cargo.toml
@@ -11,7 +11,7 @@ description =""
 thiserror = "1.0.21"
 serde_json = "1.0.58"
 filecoin-signer = { path = "../signer" }
-forest_message = "=0.7.0"
+forest_message = { default-features = false, features = ["pairing"], version = "0.7.1" }
 warp = "0.2.5"
 jsonrpc-core = "15.1.0"
 lazy_static = "1.4.0"
