--- a/signer/Cargo.toml
+++ b/signer/Cargo.toml
@@ -16,7 +16,7 @@ serde_cbor = "0.11.1"
 serde_bytes = "0.11.5"
 rayon = "1"
 
-bls-signatures = "0.6.1"
+bls-signatures = {version = "0.7", default-features = false, features = ["pairing"]}
 
 # Crypto related
 hex = { git = "https://github.com/Zondax/rust-hex", rev="6e35fb48999278c8c6c75b099baa4ea2a9d1d12b" }
@@ -29,7 +29,7 @@ sha2 = "0.9.2"
 
 # logging
 log = "0.4.11"
-env_logger = "0.7.1"
+env_logger = "0.7"
 
 arbitrary = { optional = true, features = ["derive"], version = "" }
 ffi-support = { optional = true, version = "0.4" }
@@ -38,9 +38,9 @@ ffi-support = { optional = true, version = "0.4" }
 forest_vm = "0.3.1"
 forest_address = "0.3.1"
 forest_encoding = "0.2.1"
-forest_cid = "0.3.0"
-forest_message = { default-features = false, features = ["pairing"], version = "0.7.1" }
-forest_crypto = { default-features = false, features = ["pairing"], version = "0.5.1" }
+forest_cid = { version ="0.3.0", features = ["cbor"] }
+forest_message = { default-features = false, features = ["pairing"], version = "0.7"  }
+forest_crypto = { default-features = false, features = ["pairing"], version = "0.5.1"  }
 
 tiny-bip39 = "0.8.0"
 num_bigint_chainsafe = { package = "forest_bigint", version = "0.1.2"}
