--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prefer-object-spread": "^1.2.1",
     "eslint-plugin-prettier": "^3.1.0",
+    "eslint-plugin-react": "^7.23.1",
     "prettier": "^2.2.1",
     "typescript": "^4.2.3"
   },
