use sudo for the rest of the steps

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -133,10 +133,10 @@ jobs:
             ~/.cache/sccache
           key: ${{ runner.os }}-${{ github.run_id }}-${{ needs.configure.outputs.datetime }}
       - run: sudo apt-get update && sudo apt-get install -y firefox-esr libnss3
-      - run: make install_wasmpack SILENT=true
+      - run: sudo make install_wasmpack SILENT=true
       # Disabling Chrome (only Firefox) due to  https://github.com/Zondax/filecoin-signing-tools/issues/68
-      - run: make test_npm_unit
-      - run: make test_npm_node
+      - run: sudo make test_npm_unit
+      - run: sudo make test_npm_node
 
   tests_service:
     needs: [ configure, build ]
