--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -133,7 +133,9 @@ jobs:
           key: ${{ runner.os }}-${{ github.run_id }}-${{ needs.configure.outputs.datetime }}
       - run: apt-get update && apt-get install -y firefox-esr libnss3
       - run: make install_wasmpack SILENT=true
-      - run: chown -R root:root /home/github
+      - run: |
+        chown -R root:root /github/home
+        chown -R root:root /home/github
       # Disabling Chrome (only Firefox) due to  https://github.com/Zondax/filecoin-signing-tools/issues/68
       - run: make test_npm_unit
       - run: make test_npm_node
