--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "n": "^7.1.0"
   },
   "devDependencies": {
+    "@ipld/dag-cbor": "^6.0.12",
     "@types/node": "^14.14.31",
     "@typescript-eslint/eslint-plugin": "^4.16.1",
     "@typescript-eslint/parser": "^4.16.1",
@@ -23,6 +24,7 @@
     "eslint-plugin-prefer-object-spread": "^1.2.1",
     "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-react": "^7.23.1",
+    "multiformats": "^9.4.9",
     "prettier": "^2.2.1",
     "typescript": "^4.2.3"
   },
