--- a/signer/Cargo.toml
+++ b/signer/Cargo.toml
@@ -31,7 +31,7 @@ sha2 = "0.9.2"
 log = "0.4.11"
 env_logger = "0.7"
 
-arbitrary = { optional = true, features = ["derive"], version = "" }
+arbitrary = { optional = true, features = ["derive"], version = "1" }
 ffi-support = { optional = true, version = "0.4" }
 
 
