--- a/signer-npm/js/package.json
+++ b/signer-npm/js/package.json
@@ -10,8 +10,8 @@
   "dependencies": {
     "axios": "^0.24.0",
     "base32-decode": "^1.0.0",
-    "base32-encode": "^2.0.0",
-    "bip32": "^3.0.1",
+    "base32-encode": "1.2.0",
+    "bip32": "2.0.6",
     "bip39": "^3.0.4",
     "blakejs": "^1.1.1",
     "bn.js": "^5.1.2",
