--- a/signer-npm/js/package.json
+++ b/signer-npm/js/package.json
@@ -8,6 +8,7 @@
   "author": "Zondax <info@zondax.ch>",
   "license": "Apache-2.0",
   "dependencies": {
+    "@ipld/dag-cbor": "^7.0.0",
     "axios": "^0.24.0",
     "base32-decode": "^1.0.0",
     "base32-encode": "1.2.0",
@@ -15,7 +16,6 @@
     "bip39": "^3.0.4",
     "blakejs": "^1.1.1",
     "bn.js": "^5.1.2",
-    "ipld-dag-cbor": "1.0.1",
     "leb128": "0.0.5",
     "secp256k1": "^4.0.3"
   },
