--- a/examples/wasm_node/package.json
+++ b/examples/wasm_node/package.json
@@ -22,8 +22,7 @@
   ],
   "dependencies": {
     "axios": "^0.21.1",
-    "cids": "^1.1.6",
-    "ipld-dag-cbor": "^0.18.0"
+    "cids": "^1.1.6"
   },
   "devDependencies": {
     "bip32": "^2.0.6",
