--- a/extras/Cargo.toml
+++ b/extras/Cargo.toml
@@ -19,7 +19,7 @@ multihash-derive = "=0.7.0"
 forest_json_utils = "=0.1.0"
 
 num_bigint = { package = "forest_bigint", version = "0.1.2"}
-clock = { git = "https://github.com/chainsafe/forest", rev="2863f64e40fde88433f9a00be764872f54c2e5ba" }
+clock = { package = "fil_clock", git = "https://github.com/chainsafe/forest", rev="d5a774a10b59dcad5372f520577180b9614fe2bb" }
 serde = { version = "1.0", features = ["derive"] }
 serde_bytes = "0.11.5"
 lazy_static = "1.4.0"
