--- a/signer/Cargo.toml
+++ b/signer/Cargo.toml
@@ -16,9 +16,9 @@ serde_cbor = "0.11.1"
 serde_bytes = "0.11.5"
 rayon = "1"
 
-bls-signatures = {version = "0.10", default-features = false, features = ["pairing"]}
+bls-signatures = {version = "0.9", default-features = false, features = ["pairing"]}
 
-# Crypto related
+# Crypto related    
 hex = { git = "https://github.com/Zondax/rust-hex", rev="6e35fb48999278c8c6c75b099baa4ea2a9d1d12b" }
 getrandom="0.1.14"
 libsecp256k1 = "0.6"
@@ -35,19 +35,21 @@ arbitrary = { optional = true, features = ["derive"], version = "1" }
 ffi-support = { optional = true, version = "0.4" }
 
 
-forest_vm = "0.3.1"
-forest_address = "0.3.1"
-forest_encoding = "0.2.1"
+forest_vm = "0.3.2"
+forest_address = "0.3.2"
+forest_encoding = "0.2.2"
 forest_cid = { version ="0.3.0", features = ["cbor"] }
 forest_message = { default-features = false, features = ["pairing"], version = "0.7"  }
 forest_crypto = { default-features = false, features = ["pairing"], version = "0.5.3"  }
 
 tiny-bip39 = "0.8.0"
-num_bigint_chainsafe = { package = "forest_bigint", version = "0.1.2"}
+num_bigint_chainsafe = { package = "forest_bigint", version = "0.1.4"}
 
 zx-bip44 = "0.1.0"
 
-extras = { path = "../extras"}
+#extras = { path = "../extras"}
+extras = { package = "forest_actor", path = "../../forest/vm/actor", default-features = false, features = ["pairing"] }
+
 num-traits = "0.2"
 
 [dev-dependencies]
