--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -72,47 +72,47 @@ jobs:
           cargo test --lib --all-features
 
 
-#  tests_ffi:
-#    needs: [ configure, build ]
-#    runs-on: ubuntu-latest
-#    container:
-#      image: zondax/rust-ci:latest
-#    steps:
-#      - name: Checkout
-#        uses: actions/checkout@v2
-#        with:
-#          submodules: true
-#      - name: Restore/Save sscache
-#        uses: actions/cache@v2
-#        with:
-#          path: |
-#            ~/.cache/sccache
-#          key: ${{ runner.os }}-${{ github.run_id }}-${{ needs.configure.outputs.datetime }}
-#      - name: External dependencies
-#        run: |
-#          apt-get install -y clang default-jdk g++ gcc gnustep gnustep-devel gobjc golang libicu-dev libtinfo5 valgrind
-#      - name: Cbindgen
-#        run: |
-#          cd signer-ffi
-#          rustup install nightly
-#          rustup default nightly
-#          cargo install cbindgen
-#          cbindgen --config cbindgen.toml --crate filecoin-signer-ffi --lang c --output /tmp/filecoin_signer_ffi.h
-#          cbindgen --config cbindgen.toml --crate filecoin-signer-ffi --lang c++ --output /tmp/filecoin_signer_ffi_cpp.h
-#      - name: Libraries
-#        run: |
-#          cd signer-ffi
-#          cargo build
-#          cp ../../target/debug/libfilecoin_signer_ffi.so /tmp/libfilecoin_signer_ffi.so
-#          cargo build --features with-jni
-#          cp ../../target/debug/libfilecoin_signer_ffi.so /tmp/libfilecoin_signer_ffi_java.so
-#      - run: OUT_DIR=/tmp/c ./.github/scripts/test_c.sh
-#      - run: OUT_DIR=/tmp/cpp ./.github/scripts/test_cpp.sh
-#      - run: OUT_DIR=/tmp/go ./.github/scripts/test_go.sh
-#      - run: OUT_DIR=/tmp/java ./.github/scripts/test_java.sh
-#      - run: OUT_DIR=/tmp/kotlin ./.github/scripts/test_kotlin.sh
-#      - run: OUT_DIR=/tmp/objective-c ./.github/scripts/test_objective-c.sh
-#      - run: OUT_DIR=/tmp/swift ./.github/scripts/test_swift.sh
+  tests_ffi:
+    needs: [ configure, build ]
+    runs-on: ubuntu-latest
+    container:
+      image: zondax/rust-ci:latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          submodules: true
+      - name: Restore/Save sscache
+        uses: actions/cache@v2
+        with:
+          path: |
+            ~/.cache/sccache
+          key: ${{ runner.os }}-${{ github.run_id }}-${{ needs.configure.outputs.datetime }}
+      - name: External dependencies
+        run: |
+          apt-get install -y clang default-jdk g++ gcc gnustep gnustep-devel gobjc golang libicu-dev libtinfo5 valgrind
+      - name: Cbindgen
+        run: |
+          cd signer-ffi
+          rustup install nightly
+          rustup default nightly
+          cargo install cbindgen
+          cbindgen --config cbindgen.toml --crate filecoin-signer-ffi --lang c --output /tmp/filecoin_signer_ffi.h
+          cbindgen --config cbindgen.toml --crate filecoin-signer-ffi --lang c++ --output /tmp/filecoin_signer_ffi_cpp.h
+      - name: Libraries
+        run: |
+          cd signer-ffi
+          cargo build
+          cp ../../target/debug/libfilecoin_signer_ffi.so /tmp/libfilecoin_signer_ffi.so
+          cargo build --features with-jni
+          cp ../../target/debug/libfilecoin_signer_ffi.so /tmp/libfilecoin_signer_ffi_java.so
+      - run: OUT_DIR=/tmp/c ./.github/scripts/test_c.sh
+      - run: OUT_DIR=/tmp/cpp ./.github/scripts/test_cpp.sh
+      - run: OUT_DIR=/tmp/go ./.github/scripts/test_go.sh
+      - run: OUT_DIR=/tmp/java ./.github/scripts/test_java.sh
+      - run: OUT_DIR=/tmp/kotlin ./.github/scripts/test_kotlin.sh
+      - run: OUT_DIR=/tmp/objective-c ./.github/scripts/test_objective-c.sh
+      - run: OUT_DIR=/tmp/swift ./.github/scripts/test_swift.sh
 
 
   tests_npm:
