--- a/signer/Cargo.toml
+++ b/signer/Cargo.toml
@@ -8,10 +8,10 @@ repository = "https://github.com/Zondax/filecoin-signing-tools"
 description =""
 
 [dependencies]
-thiserror = "=1.0.22"
+thiserror = "1.0.30"
 base64 = "0.12.3"
-serde = { version = "=1.0.117", features = ["derive"] }
-serde_json = "=1.0.59"
+serde = { version = "1.0.117", features = ["derive"] }
+serde_json = "1.0.79"
 serde_cbor = "0.11.1"
 serde_bytes = "0.11.5"
 rayon = "1"
@@ -47,7 +47,16 @@ num_bigint_chainsafe = { package = "forest_bigint", version = "0.1.2"}
 
 zx-bip44 = "0.1.0"
 
-extras = { path = "../extras"}
+#extras = { path = "../extras"}
+#extras = { package = "fil_builtin_actors_bundle", version = "6.0.2" }
+fil_actor_multisig = "7.0.2"
+fil_actor_paych = "7.0.2"
+fil_actor_init = "7.0.2"
+fil_actors_runtime = "7.0.2"
+fvm_shared = "0.2.0"
+clock = { package = "fil_clock", git = "https://github.com/chainsafe/forest", rev="d5a774a10b59dcad5372f520577180b9614fe2bb" }
+cid = "0.8.3"
+
 num-traits = "0.2"
 
 [dev-dependencies]
