--- a/signer-npm/Cargo.toml
+++ b/signer-npm/Cargo.toml
@@ -63,8 +63,8 @@ features = ["serde-serialize"]
 [dev-dependencies]
 wasm-bindgen-test = "0.3.15"
 
-[package.metadata.wasm-pack.profile.release]
-wasm-opt = false
+#[package.metadata.wasm-pack.profile.release]
+#wasm-opt = false
 
 [build-dependencies]
 cc = "=1.0.65"
