--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -39,10 +39,10 @@ jobs:
         run: |
           cargo clippy --version
           cargo clippy --all-features --all-targets
-      - name: audit
-        run: |
-          cargo audit --version
-          cargo audit
+      #- name: audit
+      #  run: |
+      #    cargo audit --version
+      #    cargo audit
 
 
   tests_rust:
